[INFER] Make stubcall before adjusting stack in singleton CALLPROP, bug 648708.