js/src/jit-test/tests/jaeger/bug648708.js
@@ -1,0 +1,6 @@
+thrown = false
+try {
+    ("".x = Object.seal)
+    "".x.valueOf();
+} catch (e) {thrown = true}
+assertEq(thrown, true);
